Several changes to formating and jump links. Changed SEO keywords and targeting for Google display refinements.

--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
 		</script>
 
 		<!-- Meta Description (for SEO) -->
-		<title>OFiDCrypt | e𝕏P Web3™ New-Gen Wallets & Apps</title>
+		<title>OFiDCrypt | Discover Web3 Wallets & Apps</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<meta name="description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
-		<meta name="keywords" content="cryptocurrency, blockchain, digital assets, OFiDCrypt, crypto community">
-		<meta name="author" content="Tokin ⬢">
+		<meta name="description" content="Let's explore the world of Web3 together! Try new apps and digital wallets, learn through articles and hold your first token with real value; complimentary through partner apps!">
+		<meta name="keywords" content="cryptocurrency, crypto, web3, solana, bouncy ball, expb, OFiD, blockchain, digital assets, OFiDCrypt, OFiD Crew, OFiD Kid, crypto community">
+		<meta name="author" content="Tokin">
 	
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="OFiDCrypt | e𝕏P Web3™ New-Gen Wallets & Apps">
-		<meta property="og:description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
+		<meta property="og:title" content="OFiDCrypt | Discover Web3 Wallets & Apps">
+		<meta property="og:description" content="Let's explore the world of Web3 together! Try new apps and digital wallets, learn through articles and hold your first token with real value; complimentary through partner apps!">
 		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta property="og:url" content="https://www.ofidcrypt.com">
 		<meta property="og:type" content="website">
 	
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="OFiDCrypt | e𝕏P Web3™ New-Gen Wallets & Apps">
-		<meta name="twitter:description" content="Join us and we'll explore the world of Web3 together! Try new apps and digital wallets, learn through tech related articles and create shared community experiences together.">
+		<meta name="twitter:title" content="OFiDCrypt | Discover Web3 Wallets & Apps">
+		<meta name="twitter:description" content="Let's explore the world of Web3 together! Try new apps and digital wallets, learn through articles and hold your first token with real value; complimentary through partner apps!">
 		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta name="twitter:url" content="https://www.ofidcrypt.com">
 		
