--- a/kincommunity.html
+++ b/kincommunity.html
@@ -13,8 +13,8 @@
 		gtag('config', 'G-3KX9VK5CCH');
 	</script>
 
-		<!-- JSON -->
-		<script type="application/ld+json">
+	<!-- JSON -->
+	<script type="application/ld+json">
 			{
 			  "@context": "https://schema.org",
 			  "@type": "Organization",
@@ -36,13 +36,15 @@
 	<title>The Kin Community Connection | OFiDCrypt</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="description" content="Join the Kin community to share experiences and learn about their project, vision and values.">
+	<meta name="description"
+		content="Join the Kin community to share experiences and learn about their project, vision and values.">
 	<meta name="keywords" content="cryptocurrency, Kin, blockchain, digital assets, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="The Kin Community Connection | OFiDCrypt">
-	<meta property="og:description" content="Join the Kin community to share experiences and learn about their project, vision and values.">
+	<meta property="og:description"
+		content="Join the Kin community to share experiences and learn about their project, vision and values.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/kincommunity">
 	<meta property="og:type" content="website">
@@ -50,16 +52,17 @@
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="The Kin Community Connection | OFiDCrypt">
-	<meta name="twitter:description" content="Join the Kin community to share experiences and learn about their project, vision and values.">
+	<meta name="twitter:description"
+		content="Join the Kin community to share experiences and learn about their project, vision and values.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/kincommunity">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-		
+
 	<!-- Specific PNG sizes for modern browsers -->
 	<link rel="icon" type="image/png" sizes="1280x1280" href="/favicon.png">
-	
+
 	<!-- Default Apple-Touch-Icon sizes -->
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
@@ -112,29 +115,35 @@
 			<ul class="icons">
 				<li>
 					<a href="#" aria-label="Dark-Light Desktop Toggle Button">
-					  <img src="/assets/images/darklight-toggle01.svg" alt="Dark-Light Desktop Toggle Button" class="custom-site-icon">
+						<img src="/assets/images/darklight-toggle01.svg" alt="Dark-Light Desktop Toggle Button"
+							class="custom-site-icon">
 					</a>
 				</li>
 				<li>
 					<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
-					  <img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
+						<img src="/assets/images/hvr-logo01.svg" alt="Hvr Logo" class="custom-site-icon">
 					</a>
 				</li>
-				  <li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-				  <li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
-				  <li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-				  <li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a>
+				</li>
+				<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span
+							class="label">TikTok</span></a></li>
+				<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
+							class="label">Facebook</span></a></li>
+				<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span
+							class="label">LinkedIn</span></a></li>
 			</ul>
 		</nav>
 
 		<!-- Main -->
 		<div id="main">
-		
+
 			<!-- Ad Banner -->
 			<section id="expb-ball" class="ad-banner">
 				<div style="text-align: center;">
 					<a href="https://t.me/OFiDBall" style="border-bottom: none;">
-						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
+						<img src="/assets/images/expb-banner-01.png" alt="Ad Banner"
+							style="max-width: 100%; height: auto;">
 					</a>
 				</div>
 			</section>
@@ -146,74 +155,73 @@
 					<h1>The Kin <br />
 						Community</h1>
 				</header>
-				
-				<!-- Ad Banner -->
-				<section id="kin-money" class="ad-banner">
-					<div style="text-align: center;">
-						<a href="https://t.me/KinCryptoTelegram" style="border-bottom: none;">
-							<img src="/assets/images/kin-banner01.JPG" alt="Ad Banner" style="max-width: 100%; height: auto;">
-						</a>
-					</div>
-				</section>
 
 				<!-- Community Links Table -->
 				<section class="community-links">
 					<table>
 						<!-- Ad Banner -->
-						<section id="expb-ball" class="ad-banner">
-							<div style="text-align: center;">
-								<!-- <a href="#" style="border-bottom: none;"> -->
-									<img src="/assets/images/banner-socials-bw.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
+						<section id="kin-money" class="ad-table">
+							<div class="ad-content">
+								<a href="https://t.me/KinCryptoTelegram" style="border-bottom: none;">
+									<img src="/assets/images/kin-banner01.JPG" alt="Ad Banner">
 								</a>
 							</div>
 						</section>
-						<tbody>
-							<tr>
-								<td>Join on <b>Flipchat</b> <br />
-									Room <a href="https://app.flipchat.xyz/room/32"><b>#32</b></a></td>
-								<td><a href="https://apps.apple.com/ca/app/flipchat-messenger/id6738328834">Get for iOS</a><br />
-									<a href="https://play.google.com/store/apps/details?id=xyz.flipchat.app&pcampaignid=web_share">Get for Android</a>
-								</td>
-							</tr>
-							<tr>
-								<td>Follow on <br />
-									<b>𝕏</b></td>
-								<td><a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
-							</tr>
-						</tbody>
-					</table>
+
 				</section>
+				<tbody>
+					<tr>
+						<td>Join on <b>Flipchat</b> <br />
+							Room <a href="https://app.flipchat.xyz/room/32"><b>#32</b></a></td>
+						<td><a href="https://apps.apple.com/ca/app/flipchat-messenger/id6738328834">Get for
+								iOS</a><br />
+							<a
+								href="https://play.google.com/store/apps/details?id=xyz.flipchat.app&pcampaignid=web_share">Get
+								for
+								Android</a>
+						</td>
+					</tr>
+					<tr>
+						<td>Follow on <br />
+							<b>𝕏</b>
+						</td>
+						<td><a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
+					</tr>
+				</tbody>
+				</table>
+			</section>
 
-				<!-- More About Our Partners -->
-				<h2 style="text-align: center;">More Ways to Engage</h2>
-				<p style="text-align: center;">OFiDCrypt actively works on developing and streaming <a href="/pages/livestream.html">Promotions & Live Events</a> for
-					community participation, in collaboration with other contributors.</p>
+			<!-- More About Our Partners -->
+			<h2 style="text-align: center;">More Ways to Engage</h2>
+			<p style="text-align: center;">OFiDCrypt actively works on developing and streaming <a
+					href="/pages/livestream.html">Promotions & Live Events</a> for
+				community participation, in collaboration with other contributors.</p>
 			</section>
 			</section>
 
 
-		<!-- Main -->
-		<div id="main">
-			<!-- Featured Post -->
-			<article id="article-featured" class="post featured">
-				<header class="major">
-					<span class="date">Kin Knowledge</span>
-					<h2>Kin Update<br />
-						Archive</h2>
-					<p>Research our <a href="#pagination-controls-top">Library of Kin News</a> 
-						written and published by the owner of the Kin Community Telegram.
-					</p>
-				</header>
-				<div id="community-featured-image" class="image main">
-					<a href="https://pennypost.co/p/191509648/kin-economy-monthly-review-november-24"
-								class="image fit"><img src="assets/images/novmonthlykin01.png"
-									alt="Article Title: Kin Monthy Update for November" /></a>
-				</div>
-				<ul id="community-featured-button" class="actions special">
-					<li><a href="https://pennypost.co/p/191509648/kin-economy-monthly-review-november-24"
-							class="button large">Preview</a></li>
-				</ul>
-			</article>
+			<!-- Main -->
+			<div id="main">
+				<!-- Featured Post -->
+				<article id="article-featured" class="post featured">
+					<header class="major">
+						<span class="date">Kin Knowledge</span>
+						<h2>Kin Update<br />
+							Archive</h2>
+						<p>Research our <a href="#pagination-controls-top">Library of Kin News</a>
+							written and published by the owner of the Kin Community Telegram.
+						</p>
+					</header>
+					<div id="community-featured-image" class="image main">
+						<a href="https://pennypost.co/p/191509648/kin-economy-monthly-review-november-24"
+							class="image fit"><img src="assets/images/novmonthlykin01.png"
+								alt="Article Title: Kin Monthy Update for November" /></a>
+					</div>
+					<ul id="community-featured-button" class="actions special">
+						<li><a href="https://pennypost.co/p/191509648/kin-economy-monthly-review-november-24"
+								class="button large">Preview</a></li>
+					</ul>
+				</article>
 			</div>
 
 			<!-- Header for Pagination -->
@@ -240,14 +248,14 @@
 								<h2><a href="/explore.html#article-featured">e𝕏P
 										Learn™<br /> News & Articles</a></h2>
 							</header>
-							<a href="/explore.html#article-featured"
-								class="image fit"><img src="assets/images/bg-learn-01.webp"
+							<a href="/explore.html#article-featured" class="image fit"><img
+									src="assets/images/bg-learn-01.webp"
 									alt="Article Placeholder: e𝕏P WEB3™ Learn"></a>
-							<p>We publish in-house knowledge articles to help keep you informed and safe as you explore Web3. Use the button
-									below to see what you can learn today!</p>
+							<p>We publish in-house knowledge articles to help keep you informed and safe as you explore
+								Web3. Use the button
+								below to see what you can learn today!</p>
 							<ul class="actions special">
-								<li><a href="/explore.html#article-featured"
-										class="button">See Full Library</a></li>
+								<li><a href="/explore.html#article-featured" class="button">See Full Library</a></li>
 							</ul>
 						</article>
 
@@ -260,11 +268,11 @@
 							<a href="https://pennypost.co/p/191509648/kin-economy-monthly-review-november-24"
 								class="image fit"><img src="assets/images/novmonthlykin01.png"
 									alt="Article Title: Kin Monthy Update for November" /></a>
-									<p><b>This article is published on Pennypost.</b>
-										Purchases support the writer. Optionally, you can leave a tip at the end of Pennypost
-										articles to show gratitude to the contributor.
-										Code app required to purchase from Pennypost, download from <b><a
-												href="https://getcode.com">here</a>.</b></p>
+							<p><b>This article is published on Pennypost.</b>
+								Purchases support the writer. Optionally, you can leave a tip at the end of Pennypost
+								articles to show gratitude to the contributor.
+								Code app required to purchase from Pennypost, download from <b><a
+										href="https://getcode.com">here</a>.</b></p>
 							<ul class="actions special">
 								<li><a href="https://pennypost.co/p/191509648/kin-economy-monthly-review-november-24"
 										class="button">Preview</a></li>
@@ -381,20 +389,25 @@
 					<h3>Telegram</h3>
 					<p><a href="https://t.me/OFiDBall">OFiDCrypt e𝕏P Web3™</a></p>
 				</section>
-						<!-- Hvr -->
-						<section>
-							<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
-								<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img" class="custom-site-icon-contact">
-							</a>
-							<p><a href="https://www.ofidcrypt.ca">OFiDCrypt.ca</a></p>
-						</section>	
+				<!-- Hvr -->
+				<section>
+					<a href="https://www.ofidcrypt.ca" aria-label="Hvr">
+						<img src="/assets/images/hvr-logo02.svg" alt="Hvr Logo" id="contact-img"
+							class="custom-site-icon-contact">
+					</a>
+					<p><a href="https://www.ofidcrypt.ca">OFiDCrypt.ca</a></p>
+				</section>
 				<section>
 					<h3>Social</h3>
 					<ul class="icons alt">
-						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
-						<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
-						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span
+									class="label">X</span></a></li>
+						<li><a href="https://www.tiktok.com/@OFiDKid" class="icon brands alt fa-tiktok"><span
+									class="label">TikTok</span></a></li>
+						<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span
+									class="label">Facebook</span></a></li>
+						<li><a href="https://linkedin.com/company/OFiDCrypt" class="icon brands alt fa-linkedin"><span
+									class="label">LinkedIn</span></a></li>
 					</ul>
 				</section>
 			</section>
@@ -409,7 +422,9 @@
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
 			<ul>
-				<ul><li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li></ul>
+				<ul>
+					<li>&copy; OF<span class="i">i</span>DCrypt e𝕏P Web3™ 2025</li>
+				</ul>
 			</ul>
 			<ul>
 				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
@@ -570,63 +585,63 @@
 	<script>
 		// Switch Visual Mode - Dark Mode Light Mode
 		document.addEventListener('DOMContentLoaded', (event) => {
-				console.log('DOM fully loaded and parsed');
-				
-				const darkModeToggle = document.querySelector('#darkModeToggle'); // Assuming this was your original toggle
-				const newDarkModeToggle = document.querySelector('ul.icons li a img.custom-site-icon'); // New button
-			
-				function toggleDarkMode() {
-					document.body.classList.toggle('dark-mode');
-					darkModeToggle.classList.toggle('dark');
-					const isDarkMode = document.body.classList.contains('dark-mode');
-					localStorage.setItem('dark-mode', isDarkMode);
-			
-					const icon = darkModeToggle.querySelector('i');
-					if (isDarkMode) {
-						icon.classList.remove('fa-sun');
-						icon.classList.add('fa-moon');
-						console.log('Switched to dark mode (moon icon)');
-					} else {
-						icon.classList.remove('fa-moon');
-						icon.classList.add('fa-sun');
-						console.log('Switched to light mode (sun icon)');
-					}
-				}
-			
-				// Check local storage for dark mode on page load
-				if (localStorage.getItem('dark-mode') === 'true') {
-					document.body.classList.add('dark-mode');
-					darkModeToggle.classList.add('dark');
-					const icon = darkModeToggle.querySelector('i');
-					icon.classList.add('fa-moon');
+			console.log('DOM fully loaded and parsed');
+
+			const darkModeToggle = document.querySelector('#darkModeToggle'); // Assuming this was your original toggle
+			const newDarkModeToggle = document.querySelector('ul.icons li a img.custom-site-icon'); // New button
+
+			function toggleDarkMode() {
+				document.body.classList.toggle('dark-mode');
+				darkModeToggle.classList.toggle('dark');
+				const isDarkMode = document.body.classList.contains('dark-mode');
+				localStorage.setItem('dark-mode', isDarkMode);
+
+				const icon = darkModeToggle.querySelector('i');
+				if (isDarkMode) {
 					icon.classList.remove('fa-sun');
-					console.log('Dark mode restored from local storage');
-				}
-			
-				// Event listener for original toggle button
-				if (darkModeToggle) {
-					darkModeToggle.addEventListener('click', function(event) {
-						event.preventDefault();
-						toggleDarkMode();
-					});
+					icon.classList.add('fa-moon');
+					console.log('Switched to dark mode (moon icon)');
 				} else {
-					console.warn('Dark Mode Toggle button not found');
+					icon.classList.remove('fa-moon');
+					icon.classList.add('fa-sun');
+					console.log('Switched to light mode (sun icon)');
 				}
-			
-				// Event listener for the new button
-				if (newDarkModeToggle) {
-					newDarkModeToggle.parentElement.addEventListener('click', function(event) {
-						event.preventDefault();
-						toggleDarkMode();
-					});
-					newDarkModeToggle.parentElement.addEventListener('touchstart', function(event) {
-						event.preventDefault();
-						toggleDarkMode();
-					});
-				} else {
-					console.warn('New Dark Mode Toggle button not found');
-				}
-			});
+			}
+
+			// Check local storage for dark mode on page load
+			if (localStorage.getItem('dark-mode') === 'true') {
+				document.body.classList.add('dark-mode');
+				darkModeToggle.classList.add('dark');
+				const icon = darkModeToggle.querySelector('i');
+				icon.classList.add('fa-moon');
+				icon.classList.remove('fa-sun');
+				console.log('Dark mode restored from local storage');
+			}
+
+			// Event listener for original toggle button
+			if (darkModeToggle) {
+				darkModeToggle.addEventListener('click', function (event) {
+					event.preventDefault();
+					toggleDarkMode();
+				});
+			} else {
+				console.warn('Dark Mode Toggle button not found');
+			}
+
+			// Event listener for the new button
+			if (newDarkModeToggle) {
+				newDarkModeToggle.parentElement.addEventListener('click', function (event) {
+					event.preventDefault();
+					toggleDarkMode();
+				});
+				newDarkModeToggle.parentElement.addEventListener('touchstart', function (event) {
+					event.preventDefault();
+					toggleDarkMode();
+				});
+			} else {
+				console.warn('New Dark Mode Toggle button not found');
+			}
+		});
 	</script>
 
 	<!-- Link to non-critical JavaScript files -->
