--- a/pages/about.html
+++ b/pages/about.html
@@ -35,27 +35,27 @@
 		</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>About OFiDCrypt | Connect to Crypto via Community & Partners</title>
+	<title> Our Web3 Mission | About OFiDCrypt</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description"
-		content="We can introduce you to the world of crypto, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
+		content="We can introduce you to the world of web3, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
 	<meta name="keywords" content="cryptocurrency, code wallet, vip, OFiDCrypt, crypto community">
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
-	<meta property="og:title" content="About OFiDCrypt | Connect to Crypto via Community & Partners">
+	<meta property="og:title" content="Our Web3 Mission | About OFiDCrypt">
 	<meta property="og:description"
-		content="We can introduce you to the world of crypto, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
+		content="We can introduce you to the world of web3, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/pages/about">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="About OFiDCrypt | Connect to Crypto via Community & Partners">
+	<meta name="twitter:title" content="Our Web3 Mission | About OFiDCrypt">
 	<meta name="twitter:description"
-		content="We can introduce you to the world of crypto, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
+		content="We can introduce you to the world of web3, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/about">
 
