Fixed jump link for coming soon articles to take user to featured. Changed button to display "See Featured".

--- a/posts-page2.html
+++ b/posts-page2.html
@@ -19,39 +19,39 @@
             <article>
                 <header>
                     <span class="date">February 29, 2104</span>
-                    <h2><a href="/explore.html#article-featured">More Articles<br /> Coming soon</a></h2>
+                    <h2><a href="https://www.ofidcrypt.com/explore#article-featured">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="/explore.html#article-featured" class="image fit"><img src="assets/images/article-cover-coming-soon.PNG" alt="" /></a>
+                <a href="https://www.ofidcrypt.com/explore#article-featured" class="image fit"><img src="assets/images/article-cover-coming-soon.PNG" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="/explore.html#article-featured"
-                        class="button">Coming Soon</a></li>
+                    <li><a href="https://www.ofidcrypt.com/explore#article-featured"
+                        class="button">See Featured</a></li>
                 </ul>
             </article>
 
             <article>
                 <header>
                     <span class="date">February 29, 2104</span>
-                    <h2><a href="/explore.html#article-featured">More Articles<br /> Coming soon</a></h2>
+                    <h2><a href="https://www.ofidcrypt.com/explore#article-featured">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="/explore.html#article-featured" class="image fit"><img src="assets/images/article-cover-coming-soon.PNG" alt="" /></a>
+                <a href="https://www.ofidcrypt.com/explore#article-featured" class="image fit"><img src="assets/images/article-cover-coming-soon.PNG" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="/explore.html#article-featured"
-                        class="button">Coming Soon</a></li>
+                    <li><a href="https://www.ofidcrypt.com/explore#article-featured"
+                        class="button">See Featured</a></li>
                 </ul>
             </article>
             
             <article>
                 <header>
                     <span class="date">February 29, 2104</span>
-                    <h2><a href="/explore.html#article-featured">More Articles<br /> Coming soon</a></h2>
+                    <h2><a href="https://www.ofidcrypt.com/explore#article-featured">More Articles<br /> Coming soon</a></h2>
                 </header>
-                <a href="/explore.html#article-featured" class="image fit"><img src="assets/images/article-cover-coming-soon.PNG" alt="" /></a>
+                <a href="https://www.ofidcrypt.com/explore#article-featured" class="image fit"><img src="assets/images/article-cover-coming-soon.PNG" alt="" /></a>
                 <p>"Exploring additional topics brings even more insights and perspectives..."</p>
                 <ul class="actions special">
-                    <li><a href="/explore.html#article-featured"
-                        class="button">Coming Soon</a></li>
+                    <li><a href="https://www.ofidcrypt.com/explore#article-featured"
+                        class="button">See Featured</a></li>
                 </ul>
             </article>
         </section>
