--- a/index.html
+++ b/index.html
@@ -202,8 +202,10 @@
 										<!-- Tile 2: Promote -->
 										<div class="quick-start-content">
 											<h3 class="quick-start-title">Grow Your Audience</h3>
-											<p class="align-center">Flex Rates · Reward Users · e𝕏PB Easy Pay · <b>Coming Soon</b></p> <button class="round-button"><a
-													href="https://www.tiktok.com/@ofidkid/video/7483978367784602886?is_from_webapp=1&sender_device=pc&web_id=7468541086673110533">See Trailer</a></button>
+											<p class="align-center">Flex Rates · Reward Users · e𝕏PB Easy Pay · <b>Coming Soon</b></p> <button
+												class="round-button"><a
+													href="https://www.tiktok.com/@ofidkid/video/7483978367784602886?is_from_webapp=1&sender_device=pc&web_id=7468541086673110533">See
+													Trailer</a></button>
 										</div>
 								</article>
 
