--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 					</h1>
 				
 					<div class="images-with-plus">
-						<a href="/index.html#expb-get" class="no-style-link">
+						<a href="#expb-get" class="no-style-link">
 							<img src="/assets/images/300x300-solana-expb2.png" alt="Solana Logo & Jump to eXBP">
 						</a>						
 						<span class="plus-sign">+</span>
