--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 					</h1>
 				
 					<div class="images-with-plus">
-						<a href="#expb-get" class="no-style-link">
-							<img src="/assets/images/300x300-solana-expb2.png" alt="Solana Logo & Jump to eXBP">
+						<a href="#jump-ahead" class="no-style-link">
+							<img src="/assets/images/300x300-solana-expb2.png" alt="Solana Logo & Jump to Section">
 						</a>						
 						<span class="plus-sign">+</span>
 						<a href="https://phantom.com/download" class="no-style-link">
@@ -217,7 +217,7 @@
 					
 						<!-- Quick Start Section -->
 						<section class="quick-start-section">
-							<header>
+							<header id="jump-ahead">
 								<h2>Jump Ahead with e𝕏P Web3™</h2>
 
 								<p>Get started with <b>Phantom Wallet</b> to Buy <b>Solana</b> and Swap for <b>e𝕏PB Bouncy Ball</b> in Minutes!</p>
@@ -232,7 +232,7 @@
 												href="https://phantom.com/download">Download</a></button>
 									</div>
 								</article>
-								<article class="quick-start-item"> <span class="image left" id="expb-get"><img src="/assets/images/expb-ball.png"
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/expb-ball.png"
 											alt="eXPB Icon"></span>
 											<div class="quick-start-content">
 												<h3 class="quick-start-title">Get Bouncy Ball</h3>
