Formatting changes to affiliate.html for screen size compatibility.

--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -161,12 +161,12 @@
 						<div class="product-wrapper">
 							<div class="product-content">
 								<a href="https://www.ofidcrypt.ca/">
-									<span class="image left"><img src="../assets/images/hvr-logo03.png" alt="Hvr App Colorful Logo"></span>
+									<span class="image left affiliate"><img src="../assets/images/hvr-logo03.png" alt="Hvr App Colorful Logo"></span>
 								</a>
 								<h3 style="text-align: center;">Hvr Browser | Where Sites Are Social</h3>
 								<!-- Partner Nav Button 1 -->
 								<div style="text-align: center;">
-									<button class="button"><a href="https://hvr.world">Visit Site Partner</a></button>
+									<button class="button"><a href="https://hvr.world">Visit Partner</a></button>
 								</div>
 								<p>Hvr instantly impressed us with its groundbreaking concept: Comment on, share, and tag people on any page
 									across the
@@ -182,13 +182,13 @@
 						<div class="product-wrapper">
 							<div class="product-content">
 								<a href="../kincommunity.html">
-									<span class="image right"><img src="../assets/images/logokin02.jpg"
+									<span class="image right affiliate"><img src="../assets/images/logokin02.jpg"
 											alt="Kin On Solana Logo Image"></span>
 								</a>
 								<h3 style="text-align: center;">The Kin Community</h3>
 								<!-- Partner Nav Button 2 -->
 								<div style="text-align: center;">
-									<button class="button"><a href="../kincommunity.html">Visit Community</a></button>
+									<button class="button"><a href="../kincommunity.html">Visit Page</a></button>
 								</div>
 								<p>Kin is a cryptocurrency that follows Satoshi Nakamoto's vision of a direct,
 									peer-to-peer payment system. Unlike traditional money where banks or services are
@@ -206,7 +206,7 @@
 						<div class="product-wrapper">
 							<div class="product-content">
 								<a href="vipwithcode.html">
-									<span class="image left"><img src="../assets/images/logocode01.jpg" alt="Code Wallet Logo"></span>
+									<span class="image left affiliate"><img src="../assets/images/logocode01.jpg" alt="Code Wallet Logo"></span>
 								</a>
 								<h3 style="text-align: center;">Code Wallet | Take Control of Your Money</h3>
 								<!-- Partner Nav Button 3 -->
